--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+	"start":"LD_LIBRARY_PATH=./linux64/ node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
